added new carousel for members and new footer

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,9 @@
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
+  <link rel="stylesheet" href="/bower_components/bulma/css/bulma.css" />
+  <link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick.css" />
+  <link rel="stylesheet" href="/bower_components/slick-carousel/slick/slick-theme.css" />
   <!-- endbower -->
   <!-- endbuild -->
 
@@ -23,7 +26,7 @@
   <script type="text/javascript">
     WebFontConfig = {
       google: {
-        families: ['Source+Sans+Pro:400,600:latin']
+        families: ['Roboto:400,700:latin']
       }
     };
     (function() {
@@ -148,22 +151,22 @@
       <div class="column full-bg full-bg-1">
         <div class="full-bg-text">
           <h3 class="title">
-            Community
-          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fugiat similique a quia consequatur voluptatem quasi vero aspernatur consectetur beatae, dolor neque, ad, atque eligendi voluptas molestiae, rem! Molestiae, facere.
+            Global Community
+          </h3> TechHub is the global community for technology entrepreneurs and startups (from early stage to high growth). We work with over 700 companies around the world to help them scale.
         </div>
       </div>
       <div class="column full-bg full-bg-2">
         <div class="full-bg-text">
           <h3 class="title">
             Flexible work space
-          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde debitis architecto, est deleniti reprehenderit quia assumenda laudantium labore doloribus cumque maxime doloremque quidem facere ea eveniet ipsa exercitationem at dicta!
+          </h3>The TechHub network enables members to work smarter, develop faster and increase their chances of startup success.
         </div>
       </div>
       <div class="column full-bg full-bg-1">
         <div class="full-bg-text">
           <h3 class="title">
             Events
-          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos fugiat similique a quia consequatur voluptatem quasi vero aspernatur consectetur beatae, dolor neque, ad, atque eligendi voluptas molestiae, rem! Molestiae, facere.
+          </h3> TechHub is one community with programmes and spaces in London, Swansea, Riga, Bucharest, Bangalore, Madrid and Warsaw where we help startups go global.
         </div>
       </div>
     </div>
@@ -174,7 +177,7 @@
       <h2 class="title is-text-centered title-section">
         Alumni & Members
       </h2>
-      <div class="columns">
+      <!-- <div class="columns">
         <div class="column">
           <article class="media">
             <figure class="media-left">
@@ -187,7 +190,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Growth from 5 to 60+ before moving out</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem.
+                  <strong>Reinventing communication</strong> by providing innovaative APIs that enables businesses to easily connect to their customers via voice and SMS. Started with a team of 2 at TechHub and outgrew to 60+ over 3 years.
                 </p>
               </div>
             </div>
@@ -205,7 +208,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Successful early members</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>The world's leading web data extraction platform</strong> for businesses and individuals, closed $17.3M up to date.
                 </p>
               </div>
             </div>
@@ -225,7 +228,7 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Acquired by Google in May 2014</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>Also known as Google’s $120M acquisition</strong>, Divide is giving people the best mobile experience at work, by building a mobile productivity app that allows employees to carry one device instead of two.
                 </p>
               </div>
             </div>
@@ -243,11 +246,147 @@
             <div class="media-content">
               <div class="content">
                 <p>
-                  <strong>Something cool about Callsign</strong> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.
+                  <strong>Your simple secure access to everything!</strong> The best authentication app and a proud TechHub member for over 3 years.
                 </p>
               </div>
             </div>
           </article>
+        </div>
+      </div>
+      <div class="columns">
+        <div class="column">
+          <article class="media">
+            <figure class="media-left">
+              <a href="#">
+                <p class="image is-128x128 is-vcentered">
+                  <img src="images/logo_divide.png" style="max-width:100px;">
+                </p>
+              </a>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>Royalty-free soundtracks at the tap of your finger.</strong> Started at TechHub when there was only the CEO and grew to over 15 people on the team.
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+        <div class="column">
+          <article class="media">
+            <figure class="media-left">
+              <a href="#">
+                <p class="image is-128x128">
+                  <img src="images/logo_callsign.png">
+                </p>
+              </a>
+            </figure>
+            <div class="media-content">
+              <div class="content">
+                <p>
+                  <strong>The platform that allows you to find the best boutiques and independent shops.</strong>
+                </p>
+              </div>
+            </div>
+          </article>
+        </div>
+      </div> -->
+      <div class="container is-fluid">
+        <div class="carousel carousel-members">
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-128x128">
+                    <img src="images/logo_callsign.png" alt="Image">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-6 is-text-right">Member</p>
+                </div>
+              </div>
+
+              <div class="content">
+                Your simple secure access to everything! The best authentication app and a proud TechHub member for over 3 years.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-128x128">
+                    <img src="images/logo_nexmo.png" alt="Image">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-6 is-text-right">Alumni</p>
+                </div>
+              </div>
+
+              <div class="content">
+                Reinventing communication by providing innovaative APIs that enables businesses to easily connect to their customers via voice and SMS. Started with a team of 2 at TechHub and outgrew to 60+ over 3 years.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-128x128">
+                    <img src="images/logo_divide.png" alt="Image" style="margin-top:5px;">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-6 is-text-right">Alumni</p>
+                </div>
+              </div>
+
+              <div class="content">
+                Also known as Google’s $120M acquisition, Divide is giving people the best mobile experience at work, by building a mobile productivity app that allows employees to carry one device instead of two.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-128x128">
+                    <img src="images/logo_import.png" alt="Image">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-6 is-text-right">Alumni</p>
+                </div>
+              </div>
+
+              <div class="content">
+                The world's leading web data extraction platform for businesses and individuals, closed $17.3M up to date.
+              </div>
+            </div>
+          </div>
+
+          <div class="card">
+            <div class="card-content">
+              <div class="media">
+                <div class="media-left">
+                  <figure class="image is-128x128">
+                    <img src="images/logo_jukedeck.png" alt="Image">
+                  </figure>
+                </div>
+                <div class="media-content">
+                  <p class="title is-6 is-text-right">Member</p>
+                </div>
+              </div>
+
+              <div class="content">
+                Royalty-free soundtracks at the tap of your finger. Started at TechHub when there was only the CEO and grew to over 15 people on the team.
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="is-text-centered">
@@ -257,7 +396,7 @@
   </section>
 
   <section class="section">
-    <div class="container is-fluid">
+    <div class="container">
       <h2 class="title is-text-centered title-section">Memberships</h2>
       <div class="columns same-height">
         <div class="column">
@@ -319,32 +458,17 @@
   <footer class="footer small-padding-bottom">
     <div class="columns">
       <div class="column">
-        <img src="images/map_dark.png" alt="">
-      </div>
-      <div class="column">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem facere vero ut ipsa magnam labore laboriosam numquam similique. Placeat corporis, quaerat aliquam incidunt provident earum veniam, numquam voluptate cum inventore!
-      </div>
-      <div class="column">
-        <ul class="list">
-          <li><a href="#">Bangalore</a></li>
-          <li><a href="#">Bucharest</a></li>
-          <li><a href="#">London</a></li>
-          <li><a href="#">Madrid</a></li>
-          <li><a href="#">Riga</a></li>
-          <li><a href="#">Swansea</a></li>
-          <li><a href="#">Warsaw</a></li>
-        </ul>
-      </div>
-      <div class="column">
-        <ul class="list">
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Team</a></li>
-          <li><a href="#">Gallery</a></li>
-          <li><a href="#">Jobs</a></li>
-          <li><a href="#">Riga</a></li>
-          <li><a href="#">Swansea</a></li>
-          <li><a href="#">Warsaw</a></li>
-        </ul>
+        <div class="tabs is-centered">
+          <div class="container is-fluid is-text-centered">
+            <ul>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Gallery</a></li>
+              <li><a href="#">Jobs</a></li>
+              <li><a href="#">Press</a></li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -375,6 +499,8 @@
 
   <!-- build:js scripts/vendor.js -->
   <!-- bower:js -->
+  <script src="/bower_components/jquery/dist/jquery.js"></script>
+  <script src="/bower_components/slick-carousel/slick/slick.min.js"></script>
   <!-- endbower -->
   <!-- endbuild -->
 
