--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,8 @@
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
-  <script type="text/javascript" src="https://fast.fonts.net/jsapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.js" async></script>
+  <!-- <script type="text/javascript" src="https://fast.fonts.net/jsapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.js" async></script> -->
+  <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.css"/>
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
@@ -70,7 +71,7 @@
             <a href="#">Blog</a>
           </span>
             <span class="header-item is-dark-bg">
-            <a class="button is-techhub">
+            <a class="button is-transparent">
               Contact us
             </a>
           </span>
@@ -172,125 +173,11 @@
     </div>
   </section>
 
-  <section class="section">
+  <section class="section small-padding">
     <div class="container is-fluid">
       <h2 class="title is-text-centered title-section">
         Alumni & Members
       </h2>
-      <!-- <div class="columns">
-        <div class="column">
-          <article class="media">
-            <figure class="media-left">
-              <a href="#">
-                <p class="image is-128x128 is-vcentered">
-                  <img src="images/logo_nexmo.png">
-                </p>
-              </a>
-            </figure>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>Reinventing communication</strong> by providing innovaative APIs that enables businesses to easily connect to their customers via voice and SMS. Started with a team of 2 at TechHub and outgrew to 60+ over 3 years.
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-        <div class="column">
-          <article class="media">
-            <figure class="media-left">
-              <a href="#">
-                <p class="image is-128x128">
-                  <img src="images/logo_import.png">
-                </p>
-              </a>
-            </figure>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>The world's leading web data extraction platform</strong> for businesses and individuals, closed $17.3M up to date.
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-      </div>
-      <div class="columns">
-        <div class="column">
-          <article class="media">
-            <figure class="media-left">
-              <a href="#">
-                <p class="image is-128x128 is-vcentered">
-                  <img src="http://www.divide.com/images/header_logo.png" style="max-width:100px;">
-                </p>
-              </a>
-            </figure>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>Also known as Google’s $120M acquisition</strong>, Divide is giving people the best mobile experience at work, by building a mobile productivity app that allows employees to carry one device instead of two.
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-        <div class="column">
-          <article class="media">
-            <figure class="media-left">
-              <a href="#">
-                <p class="image is-128x128">
-                  <img src="images/logo_callsign.png">
-                </p>
-              </a>
-            </figure>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>Your simple secure access to everything!</strong> The best authentication app and a proud TechHub member for over 3 years.
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-      </div>
-      <div class="columns">
-        <div class="column">
-          <article class="media">
-            <figure class="media-left">
-              <a href="#">
-                <p class="image is-128x128 is-vcentered">
-                  <img src="images/logo_divide.png" style="max-width:100px;">
-                </p>
-              </a>
-            </figure>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>Royalty-free soundtracks at the tap of your finger.</strong> Started at TechHub when there was only the CEO and grew to over 15 people on the team.
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-        <div class="column">
-          <article class="media">
-            <figure class="media-left">
-              <a href="#">
-                <p class="image is-128x128">
-                  <img src="images/logo_callsign.png">
-                </p>
-              </a>
-            </figure>
-            <div class="media-content">
-              <div class="content">
-                <p>
-                  <strong>The platform that allows you to find the best boutiques and independent shops.</strong>
-                </p>
-              </div>
-            </div>
-          </article>
-        </div>
-      </div> -->
       <div class="container is-fluid">
         <div class="carousel carousel-members">
           <div class="card">
@@ -395,7 +282,7 @@
     </div>
   </section>
 
-  <section class="section">
+  <section class="section small-padding">
     <div class="container">
       <h2 class="title is-text-centered title-section">Memberships</h2>
       <div class="columns same-height">
@@ -469,11 +356,6 @@
             </ul>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="container">
-      <div class="content is-text-centered">
-        TechHub, 4-5 Bonhill Street, EC2 4BX, London (UK)
       </div>
     </div>
   </footer>
