added footer social icons

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,8 @@
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <!-- Place favicon.ico in the root directory -->
   <!-- <script type="text/javascript" src="https://fast.fonts.net/jsapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.js" async></script> -->
-  <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.css" />
+  <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.css" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
@@ -283,7 +284,7 @@
   </section>
 
   <section class="section is-paddingless">
-    <h2 class="title is-text-centered">Memberships</h2>
+    <h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Memberships</h2>
     <div class="columns columns-minimal-border">
       <div class="column full-bg full-bg-flex">
         <div class="full-bg-text">
@@ -311,47 +312,6 @@
       <a href="#" class="button is-medium">Discover more and check availability in our locations</a>
     </div> -->
   </section>
-
-  <!-- <section class="section small-padding">
-    <div class="container">
-      <h2 class="title is-text-centered title-section">Memberships</h2>
-      <div class="columns same-height">
-        <div class="column">
-          <div class="message is-primary message-membership">
-            <div class="message-header is-text-centered">
-              Flex
-            </div>
-            <div class="message-body">
-              Lonely Founder? Working from home? Still working on your idea? Looking for feedback? Join the community and drop-in whenever you're around!
-            </div>
-          </div>
-        </div>
-        <div class="column">
-          <div class="message is-primary message-membership">
-            <div class="message-header is-text-centered">
-              Resident
-            </div>
-            <div class="message-body">
-              Your own desk in our open plan resident area! 24/7 access for individuals and teams.
-            </div>
-          </div>
-        </div>
-        <div class="column">
-          <div class="message is-primary message-membership">
-            <div class="message-header is-text-centered">
-              Team
-            </div>
-            <div class="message-body">
-              Your very own private space within TechHub. Stay within the community as you grow. Teams of 4 or more. Great for regulated companies who need a locking door but want to stay in the community.
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="content is-text-centered">
-        <a href="#" class="button is-medium">Discover more and check availability in our locations</a>
-      </div>
-    </div>
-  </section> -->
 
   <section id="newsletter" class="hero is-primary is-bold">
     <div class="hero-content">
@@ -386,6 +346,13 @@
             </ul>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="columns">
+      <div class="column is-centered footer-icons">
+        <a href="https://www.facebook.com/TechHub"><span class="icon"><i class="fa fa-facebook-official"></i></span></a>
+        <a href="https://twitter.com/TechHub"><span class="icon"><i class="fa fa-twitter-square"></i></span></a>
+        <a href="https://instagram.com/techhublondon"><span class="icon"><i class="fa fa-instagram"></i></span></a>
       </div>
     </div>
   </footer>
