changed a few images

--- a/app/index.html
+++ b/app/index.html
@@ -61,16 +61,16 @@
           </span>
           <div class="header-right header-menu">
             <span class="header-item is-dark-bg">
-            <a href="#">Memberships</a>
+            <a href="https://apply.techhub.com">Memberships</a>
           </span>
             <span class="header-item is-dark-bg">
-            <a href="#">Events</a>
+            <a href="https://www.techhub.com/events/">Events</a>
           </span>
             <span class="header-item is-dark-bg">
-            <a href="#">Blog</a>
+            <a href="https://blog.techhub.com">Blog</a>
           </span>
             <span class="header-item is-dark-bg">
-            <a class="button is-transparent">
+            <a href="https://www.techhub.com/contact-us/" class="button is-transparent">
               Contact us
             </a>
           </span>
@@ -277,9 +277,9 @@
           </div>
         </div>
       </div>
-      <div class="is-text-centered">
+      <!-- <div class="is-text-centered">
         <a href="#" class="button is-medium">What are members saying about TechHub?</a>
-      </div>
+      </div> -->
     </div>
   </section>
 
@@ -332,17 +332,31 @@
     </div>
   </section>
 
+  <section class="section section-partners is-paddingless" id="partners">
+    <div class="container">
+      <h2 class="title is-4 is-text-centered">Partners</h2>
+      <div class="columns">
+        <div class="column">
+          <div class="is-text-centered">
+            <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a><a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <footer class="footer small-padding-bottom">
     <div class="columns">
       <div class="column">
         <div class="tabs is-centered">
           <div class="container is-fluid is-text-centered">
             <ul>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Team</a></li>
-              <li><a href="#">Gallery</a></li>
-              <li><a href="#">Jobs</a></li>
-              <li><a href="#">Press</a></li>
+              <li><a href="https://www.techhub.com/about-us/">About Us</a></li>
+              <li><a href="https://www.techhub.com/staff/">Team</a></li>
+              <!-- <li><a href="https://www.techhub.com/gallery/">Gallery</a></li> -->
+              <li><a href="https://www.techhub.com/jobs/">Jobs</a></li>
+              <li><a href="https://www.techhub.com/press/">Press</a></li>
+              <li><a href="https://www.techhub.com/partners/">Partners</a></li>
             </ul>
           </div>
         </div>
