--- a/app/index.html
+++ b/app/index.html
@@ -81,7 +81,7 @@
 
     <div class="covervid-wrapper">
       <video class="covervid-video" autoplay loop poster="img/video-fallback.png">
-        <source src="videos/bg_dark.mp4" type="video/mp4">
+        <source src="videos/bg_dark2.mp4" type="video/mp4">
       </video>
     </div>
 
@@ -113,13 +113,13 @@
       <nav class="tabs is-centered tabs-home">
         <div class="container is-text-centered">
           <ul>
-            <li><a href="#">Bangalore</a></li>
-            <li><a href="#">Bucharest</a></li>
-            <li><a href="#">London</a></li>
-            <li><a href="#">Madrid</a></li>
-            <li><a href="#">Riga</a></li>
-            <li><a href="#">Swansea</a></li>
-            <li><a href="#">Warsaw</a></li>
+            <li><a href="https://bangalore.techhub.com">Bangalore</a></li>
+            <li><a href="https://bucharest.techhub.com">Bucharest</a></li>
+            <li><a href="https://london.techhub.com">London</a></li>
+            <li><a href="https://madrid.techhub.com">Madrid</a></li>
+            <li><a href="https://riga.techhub.com">Riga</a></li>
+            <li><a href="https://swansea.techhub.com">Swansea</a></li>
+            <li><a href="https://warsaw.techhub.com">Warsaw</a></li>
           </ul>
         </div>
       </nav>
@@ -334,7 +334,7 @@
 
   <section class="section section-partners is-paddingless" id="partners">
     <div class="container">
-      <h2 class="title is-4 is-text-centered">Partners</h2>
+      <h2 class="title is-5 is-text-centered">Partners</h2>
       <div class="columns">
         <div class="column">
           <div class="is-text-centered">
