working on mobile

--- a/app/index.html
+++ b/app/index.html
@@ -149,7 +149,7 @@
 
   <section class="section is-paddingless">
     <!-- <h2 class="title is-text-centered">We help startups grow better, faster</h2> -->
-    <div class="columns columns-minimal-border">
+    <div class="columns is-mobile columns-minimal-border">
       <div class="column full-bg full-bg-global-community">
         <div class="full-bg-text">
           <h3 class="title">
