upgrade, mobile version

--- a/app/index.html
+++ b/app/index.html
@@ -93,10 +93,6 @@
         The global community
         <br class="is-hidden-mobile">for technology startups
       </h1>
-        <!-- <h2 class="subtitle subtitle-home">
-        Online and physical places where startups can work,
-        <br>meet, collaborate, network, learn and have fun
-      </h2> -->
         <a href="#" class="button is-home-cta is-medium">Become a member</a>
         <a href="#" class="button is-home-cta is-medium">Attend our Events</a>
       </div>
@@ -149,7 +145,7 @@
 
   <section class="section is-paddingless">
     <!-- <h2 class="title is-text-centered">We help startups grow better, faster</h2> -->
-    <div class="columns is-mobile columns-minimal-border">
+    <div class="columns columns-minimal-border">
       <div class="column full-bg full-bg-global-community">
         <div class="full-bg-text">
           <h3 class="title">
@@ -160,15 +156,42 @@
       <div class="column full-bg full-bg-flex-space">
         <div class="full-bg-text">
           <h3 class="title">
-            Flexible work space
+            Flexible Work Space
           </h3>The TechHub network enables members to work smarter, develop faster and increase their chances of startup success.
         </div>
       </div>
       <div class="column full-bg full-bg-events">
         <div class="full-bg-text">
           <h3 class="title">
-            Events
-          </h3> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum amet porro sed cupiditate numquam quidem dolores at voluptatum, maxime recusandae.
+            Startup Support Program
+          </h3> Events / programmes ipsum dolor sit amet, consectetur adipisicing elit. Illum amet porro sed cupiditate numquam quidem dolores.
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section is-paddingless">
+    <h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Memberships</h2>
+    <div class="columns columns-minimal-border">
+      <div class="column full-bg full-bg-flex">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Flex
+          </h3> Lonely Founder? Working from home? Join the community and drop-in whenever you're around!
+        </div>
+      </div>
+      <div class="column full-bg full-bg-resident">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Resident
+          </h3>Your own desk in our open plan resident area! 24/7 access for individuals and teams.
+        </div>
+      </div>
+      <div class="column full-bg full-bg-team">
+        <div class="full-bg-text">
+          <h3 class="title">
+            Team
+          </h3> Your very own private space. Stay within the community as you grow. Teams of 4 or more.
         </div>
       </div>
     </div>
@@ -283,36 +306,6 @@
     </div>
   </section>
 
-  <section class="section is-paddingless">
-    <h2 class="title is-text-centered" style="margin-top:10px;margin-bottom:20px;">Memberships</h2>
-    <div class="columns columns-minimal-border">
-      <div class="column full-bg full-bg-flex">
-        <div class="full-bg-text">
-          <h3 class="title">
-            Flex
-          </h3> Lonely Founder? Working from home? Join the community and drop-in whenever you're around!
-        </div>
-      </div>
-      <div class="column full-bg full-bg-resident">
-        <div class="full-bg-text">
-          <h3 class="title">
-            Resident
-          </h3>Your own desk in our open plan resident area! 24/7 access for individuals and teams.
-        </div>
-      </div>
-      <div class="column full-bg full-bg-team">
-        <div class="full-bg-text">
-          <h3 class="title">
-            Team
-          </h3> Your very own private space. Stay within the community as you grow. Teams of 4 or more.
-        </div>
-      </div>
-    </div>
-    <!-- <div class="is-text-centered">
-      <a href="#" class="button is-medium">Discover more and check availability in our locations</a>
-    </div> -->
-  </section>
-
   <section id="newsletter" class="hero is-primary is-bold">
     <div class="hero-content">
       <div class="container">
@@ -363,7 +356,7 @@
       </div>
     </div>
     <div class="columns">
-      <div class="column is-centered footer-icons">
+      <div class="column is-text-centered footer-icons">
         <a href="https://www.facebook.com/TechHub"><span class="icon"><i class="fa fa-facebook-official"></i></span></a>
         <a href="https://twitter.com/TechHub"><span class="icon"><i class="fa fa-twitter-square"></i></span></a>
         <a href="https://instagram.com/techhublondon"><span class="icon"><i class="fa fa-instagram"></i></span></a>
