--- a/app/index.html
+++ b/app/index.html
@@ -1,17 +1,95 @@
 <!doctype html>
-<html lang="">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="">
+  <meta name="description" content="TechHub is the global community for technology entrepreneurs and startups. We work with over 700 companies around the world to help them scale.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>splash</title>
+  <title>TechHub - The Global Community for Technology Startups</title>
 
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <script>
+    /*! loadCSS: load a CSS file asynchronously. [c]2016 @scottjehl, Filament Group, Inc. Licensed MIT */
+    (function(w) {
+      "use strict";
+      /* exported loadCSS */
+      var loadCSS = function(href, before, media) {
+        // Arguments explained:
+        // `href` [REQUIRED] is the URL for your CSS file.
+        // `before` [OPTIONAL] is the element the script should use as a reference for injecting our stylesheet <link> before
+        // By default, loadCSS attempts to inject the link after the last stylesheet or script in the DOM. However, you might desire a more specific location in your document.
+        // `media` [OPTIONAL] is the media type or query of the stylesheet. By default it will be 'all'
+        var doc = w.document;
+        var ss = doc.createElement("link");
+        var newMedia = media || "all";
+        var ref;
+        if (before) {
+          ref = before;
+        } else {
+          var refs = (doc.body || doc.getElementsByTagName("head")[0]).childNodes;
+          ref = refs[refs.length - 1];
+        }
+
+        var sheets = doc.styleSheets;
+        ss.rel = "stylesheet";
+        ss.href = href;
+        // temporarily set media to something inapplicable to ensure it'll fetch without blocking render
+        ss.media = "only x";
+
+        // wait until body is defined before injecting link. This ensures a non-blocking load in IE11.
+        function ready(cb) {
+          if (doc.body) {
+            return cb();
+          }
+          setTimeout(function() {
+            ready(cb);
+          });
+        }
+        // Inject link
+        // Note: the ternary preserves the existing behavior of "before" argument, but we could choose to change the argument to "after" in a later release and standardize on ref.nextSibling for all refs
+        // Note: `insertBefore` is used instead of `appendChild`, for safety re: http://www.paulirish.com/2011/surefire-dom-element-insertion/
+        ready(function() {
+          ref.parentNode.insertBefore(ss, (before ? ref : ref.nextSibling));
+        });
+        // A method (exposed on return object for external use) that mimics onload by polling until document.styleSheets until it includes the new sheet.
+        var onloadcssdefined = function(cb) {
+          var resolvedHref = ss.href;
+          var i = sheets.length;
+          while (i--) {
+            if (sheets[i].href === resolvedHref) {
+              return cb();
+            }
+          }
+          setTimeout(function() {
+            onloadcssdefined(cb);
+          });
+        };
+
+        // once loaded, set link's media back to `all` so that the stylesheet applies once it loads
+        if (ss.addEventListener) {
+          ss.addEventListener("load", function() {
+            this.media = newMedia;
+          });
+        }
+        ss.onloadcssdefined = onloadcssdefined;
+        onloadcssdefined(function() {
+          if (ss.media !== newMedia) {
+            ss.media = newMedia;
+          }
+        });
+        return ss;
+      };
+      // commonjs
+      if (typeof exports !== "undefined") {
+        exports.loadCSS = loadCSS;
+      } else {
+        w.loadCSS = loadCSS;
+      }
+    }(typeof global !== "undefined" ? global : this));
+    loadCSS('https://fast.fonts.net/cssapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.css');
+    loadCSS('https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css');
+  </script>
   <!-- Place favicon.ico in the root directory -->
-  <!-- <script type="text/javascript" src="https://fast.fonts.net/jsapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.js" async></script> -->
-  <link type="text/css" rel="stylesheet" href="https://fast.fonts.net/cssapi/e3855c23-bf23-48e5-a10c-0e1d246fb74c.css" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
   <!-- build:css styles/vendor.css -->
   <!-- bower:css -->
@@ -44,8 +122,8 @@
 
 <body>
 
-  <section class="hero is-fullheight">
-    <div class="hero-header hero-home">
+  <section class="hero is-fullheight hero-home">
+    <div class="hero-header">
       <header class="header">
         <div class="container container-header">
           <div class="header-left">
@@ -80,7 +158,7 @@
     </div>
 
     <div class="covervid-wrapper">
-      <video class="covervid-video" autoplay loop poster="img/video-fallback.png">
+      <video class="covervid-video" autoplay loop>
         <source src="videos/bg_dark2.mp4" type="video/mp4">
       </video>
     </div>
@@ -106,7 +184,7 @@
           <a href="https://www.googleforentrepreneurs.com"><img src="images/gfe.png" alt="Google for Entrepreneurs" class="logo-gfe"></a>
         </div>
       </div>
-      <nav class="tabs is-centered tabs-home">
+      <nav class="tabs is-centered tabs-home is-hidden-mobile">
         <div class="container is-text-centered">
           <ul>
             <li><a href="https://bangalore.techhub.com">Bangalore</a></li>
@@ -331,7 +409,8 @@
       <div class="columns">
         <div class="column">
           <div class="is-text-centered">
-            <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a><a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
+            <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a>
+            <a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
           </div>
         </div>
       </div>
