fixed mobile bug

--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,10 @@
       }
     };
     (function(d) {
-       var wf = d.createElement('script'), s = d.scripts[0];
-       wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
-       s.parentNode.insertBefore(wf, s);
+      var wf = d.createElement('script'),
+        s = d.scripts[0];
+      wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js';
+      s.parentNode.insertBefore(wf, s);
     })(document);
   </script>
   <script>
@@ -404,13 +405,9 @@
   <section class="section section-partners is-paddingless" id="partners">
     <div class="container">
       <h2 class="title is-5 is-text-centered">Partners</h2>
-      <div class="columns">
-        <div class="column">
-          <div class="is-text-centered">
-            <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a>
-            <a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
-          </div>
-        </div>
+      <div class="is-text-centered">
+        <a href="https://www.googleforentrepreneurs.com"><img class="image img-logo-gfe" src="images/logo_gfe.png" alt="Google for Entrepreneurs"></a>
+        <a href="http://www.btplc.com/btinfinitylab/"><img class="image img-logo-bt" src="images/logo_bt.png" alt="BT"></a>
       </div>
     </div>
   </section>
