--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,21 @@
 </head>
 
 <body>
-
+  <div class="button_container" id="toggle">
+    <span class="top"></span>
+    <span class="middle"></span>
+    <span class="bottom"></span>
+  </div>
+  <div class="overlay is-overlay" id="overlay">
+    <nav class="overlay-menu">
+      <ul>
+        <li ><a href="https://apply.techhub.com">Memberships</a></li>
+        <li><a href="https://www.techhub.com/events/">Events</a></li>
+        <li><a href="https://blog.techhub.com">Blog</a></li>
+        <li><a href="https://www.techhub.com/contact-us/">Contact Us</a></li>
+      </ul>
+    </nav>
+  </div>
   <section class="hero is-fullheight hero-home">
     <div class="hero-header">
       <header class="header">
@@ -131,11 +145,11 @@
           </div>
           <div class="header-center">
           </div>
-          <span class="header-toggle">
+          <!-- <span class="header-toggle">
           <span></span>
           <span></span>
           <span></span>
-          </span>
+          </span> -->
           <div class="header-right header-menu">
             <span class="header-item is-dark-bg">
             <a href="https://apply.techhub.com">Memberships</a>
