more padding on buttons

--- a/app/index.html
+++ b/app/index.html
@@ -228,8 +228,8 @@
         <p class="title">365 per year</p>
       </div>
       <div class="navbar-item is-text-centered">
-        <p class="heading">Awesomeness</p>
-        <p class="title">100%</p>
+        <p class="heading">Raised</p>
+        <p class="title">$3b</p>
       </div>
     </nav>
   </section>
